tests/rosetta/out/Smalltalk/anonymous-recursion-2.out
/tmp/anonymous-recursion-2.st:10: parse error, expected ']'
